# ai-operator-os

./: .gitignore  LICENSE  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml
apps/api/: main.py
apps/api/agents/: agent_node_builder.py  base.py  critique_schema.py  dag_adapter.py  planner_agent.py  reflection_agent.py  reflection_loop.py  types.py  verifier_agent.py
apps/api/analytics/: cost_analyzer.py  dashboard_builder.py  latency_profiler.py  metrics_collector.py  quality_analyzer.py
apps/api/auth/: api_key.py  middleware.py  tenant.py
apps/api/billing/: cost_meter.py  usage_tracker.py
apps/api/bootstrap/: container.py
apps/api/control_plane/: admin.py
apps/api/core/: exceptions.py  logging.py  middleware.py
apps/api/deployment/: experiment_runner.py  feature_flags.py  staging_router.py  traffic_splitter.py  user_registry.py
apps/api/docs/: openapi_builder.py
apps/api/evolution/: behavior_analyzer.py  cycle_controller.py  feedback_collector.py  planner_mutator.py  policy_optimizer.py
apps/api/execution/: concurrency.py  context.py  executor.py  fallback.py  node_executor.py  retry.py  stream_state.py  streaming.py
apps/api/learning/: feedback_collector.py  feedback_loop.py  (+5 more)
apps/web/: package-lock.json  package.json  tsconfig.json
core/llm/: client.py
gateway/: litellm_config.yaml  test_gateway.py
tests/: conftest.py
tests/cognitive/: failure_injection.py  test_e2e_flow.py  test_replay_consistency.py  test_tenant_isolation.py
tests/integration/: test_chat.py  test_stream.py  test_tools.py
(+147 files in other folders)
